--- a/public/assets/css/game-view.css
+++ b/public/assets/css/game-view.css
@@ -80,20 +80,20 @@
 }
 
 /* Video Streaming Content */
-#video-container video {
+#video-container video, #video-container2 video {
 	position: relative;
 	float: left;
 	width: 100%;
 	cursor: pointer;
 }
 
-#video-container div {
+#video-container div, #video-container2 div {
 	float: left;
 	width: 100%;
 	position: relative;
 }
 
-#video-container p {
+#video-container p, #video-container2 p {
 	display: inline-block;
 	background: #f8f8f8;
 	padding-left: 5px;
@@ -103,7 +103,7 @@
 	border-bottom-right-radius: 4px;
 }
 
-#video-container p.userName {
+#video-container p.userName, #video-container2 p.userName {
 	float: right;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 0px;
