--- a/public/assets/css/game-view.css
+++ b/public/assets/css/game-view.css
@@ -160,3 +160,14 @@ video {
 	object-fit: cover;
 	height: 180px;
 }
+
+.answer_timer {
+    background-color: #61DAFB;
+    color: white;
+    font-size: 42px;
+    border: 4px solid black;
+    padding: 15px;
+    width: 120px;
+    margin-top: 3%;
+    margin-bottom: 5px;
+}
